Finished Models, Added HTMLs,JSs,CSSs

--- a/PR060-2019-Web-projekat/HTML/FitnessCenters.html
+++ b/PR060-2019-Web-projekat/HTML/FitnessCenters.html
@@ -7,7 +7,7 @@
     <script src="../Scripts/Index.js"></script>
     <link href="../Content/bootstrap.css" rel="stylesheet" />
     <link href="../Content/Site.css" rel="stylesheet" />
-    <title>Home</title>
+    <title>Fitnes centri</title>
 </head>
 <body>
     <!---------------HEADER WITH MENU-------------------->
@@ -15,22 +15,22 @@
         <nav class="nav-left">
             <ul class="nav_links">
                 <li><a id="nav-index" href="#">Home</a></li>
-                <li><a id="nav-fitness-centers"href="#">Fitnes Centri</a></li>
+                <li><a id="nav-fitness-centers" href="#">Fitnes Centri</a></li>
                 <li><a href="#">Help</a></li>
             </ul>
         </nav>
         <nav class="nav-right">
             <ul ul class="nav_links">
-                <li><a id="nav-registration"href="#">Registracija</a></li>
-                <li><a id="nav-login"href="#">Prijava</a></li>
-                <li ><a id="nav-sign_out" href="#">Odjava</a></li>
+                <li><a id="nav-registration" href="#">Registracija</a></li>
+                <li><a id="nav-login" href="#">Prijava</a></li>
+                <li><a id="nav-sign_out" href="#">Odjava</a></li>
             </ul>
-        </nav>        
+        </nav>
     </header>
     <!--------------------HOME--------------------------------->
 
 
-  
-    
+
+
 </body>
 </html>
