Added more pages

--- a/PR060-2019-Web-projekat/HTML/History.html
+++ b/PR060-2019-Web-projekat/HTML/History.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <script src="../Scripts/jquery-3.3.1.js"></script>
-    <script src="../Scripts/Login.js"></script>
+    <script src="../Scripts/History.js"></script>
     <script src="../Scripts/Navigation.js"></script>
     <link href="../Content/bootstrap.css" rel="stylesheet" />
     <link href="../Content/Site.css" rel="stylesheet" />
-    <title>Prijava</title>
+    <title>Istorija</title>
 </head>
 <body>
     <!---------------HEADER WITH MENU-------------------->
@@ -31,17 +31,7 @@
             </ul>
         </nav>
     </header>
-    <!--------------------LOGIN--------------------------------->
-    <p>Ovo je prijava</p>
-    <div class="container">
-        <h1>Welcome</h1>
-        
-        <form class="form">
-            <input type="text" placeholder="Username">
-            <input type="password" placeholder="Password">
-            <button type="submit" id="login-button">Login</button>
-        </form>
-    </div>
+    <!--------------------HOME--------------------------------->
 
 
 
