--- a/PR060-2019-Web-projekat/HTML/Registration.html
+++ b/PR060-2019-Web-projekat/HTML/Registration.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <script src="../Scripts/jquery-3.3.1.js"></script>
-    <script src="../Scripts/Index.js"></script>
+    <script src="../Scripts/Registration.js"></script>
+    <script src="../Scripts/Navigation.js"></script>
     <link href="../Content/bootstrap.css" rel="stylesheet" />
     <link href="../Content/Site.css" rel="stylesheet" />
     <title>Registracija</title>
@@ -14,22 +15,25 @@
     <header>
         <nav class="nav-left">
             <ul class="nav_links">
-                <li><a id="nav-index" href="#">Home</a></li>
-                <li><a id="nav-fitness-centers" href="#">Fitnes Centri</a></li>
-                <li><a href="#">Help</a></li>
+                <li><a id="nav-index" href="#">Fitnes Centri</a></li>
+                <li><a id="nav-history" href="#">Istorija</a></li>
+                <li><a id="nav-my-trainings" href="#">Moji treninzi</a></li>
+                <li><a id="nav-edit-trainers" href="#">Upravljaj trenerima</a></li>
+                <li><a id="nav-edit-centers" href="#">Upravljaj fitnes centrima</a></li>
             </ul>
         </nav>
         <nav class="nav-right">
             <ul ul class="nav_links">
                 <li><a id="nav-registration" href="#">Registracija</a></li>
                 <li><a id="nav-login" href="#">Prijava</a></li>
+                <li><a id="nav-profile" href="#">Profil</a></li>
                 <li><a id="nav-sign_out" href="#">Odjava</a></li>
             </ul>
         </nav>
     </header>
     <!--------------------HOME--------------------------------->
 
-
+    <p id="majko">ovo je registracija </p>
 
 
 </body>
