Fixed session track finally

--- a/PR060-2019-Web-projekat/HTML/Login.html
+++ b/PR060-2019-Web-projekat/HTML/Login.html
@@ -34,12 +34,12 @@
     <!--------------------LOGIN--------------------------------->
     <p>Ovo je prijava</p>
     <div class="container">
-        <h1>Welcome</h1>
+        <h1>Prijava</h1>
         
-        <form class="form">
-            <input type="text" placeholder="Username">
-            <input type="password" placeholder="Password">
-            <button type="submit" id="login-button">Login</button>
+        <form class="login-form">
+            <input id="txt-username" type="text" placeholder="Username">
+            <input id="txt-password" type="password" placeholder="Password">
+            <button id="loggin-button" type="submit" >Login</button>
         </form>
     </div>
 
