--- a/PR060-2019-Web-projekat/HTML/Registration.html
+++ b/PR060-2019-Web-projekat/HTML/Registration.html
@@ -33,8 +33,35 @@
     </header>
     <!--------------------HOME--------------------------------->
 
-    <p id="majko">ovo je registracija </p>
+    
+    <p>Ovo je registracija</p>
+    <div class="container">
+        <h1>Prijava</h1>
 
+        <form class="registration-form">
+            <table>
+                <tr><td>Korisnicko ime</td><td> <input id="txt-username" type="text" placeholder="Username"></td></tr>
+                <tr><td>Lozinka</td><td><input id="txt-password" type="password" placeholder="Password"></td></tr>
+                <tr><td>Potvrdi lozinku</td><td><input id="txt-confirm-password" type="password" placeholder="Confirm password"></td></tr>
+                <tr><td>Ime</td><td><input id="txt-fname" type="text" placeholder="First Name"></td></tr>
+                <tr><td>Prezime</td><td><input id="txt-lname" type="text" placeholder="Last Name"></td></tr>
+                <tr><td>Email</td><td><input id="txt-email" type="email" placeholder="Email"></td></tr>
+                <tr><td>Datum rodjenja</td><td><input id="txt-date" type="date"></td></tr>
+                <tr>
+                    <td>Pol</td>
+                    <td>
+                        <select id="gender">
+                            <option value="0">Musko</option>
+                            <option value="1">Zensko</option>
+                            <option value="2">Drugo</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr><td colspan="2" align="center"><button id="registration-button" type="submit">Register</button></td></tr>
+                <tr><td colspan="2" align="center"><button id="registration-button2" type="submit">Register</button></td></tr>
+            </table>
+        </form>
+    </div>
 
 </body>
 </html>
