Finished everything for registered and unregistered user

--- a/PR060-2019-Web-projekat/HTML/Index.html
+++ b/PR060-2019-Web-projekat/HTML/Index.html
@@ -32,7 +32,33 @@
         </nav>
     </header>
     <!--------------------HOME--------------------------------->
+    <br />
+    <br />
+    <div id="fitness-centers-search">
+        <table id="search-table">
+            <tr>
+                <th rowspan="2">Pretraga</th>
+                <th>Naziv</th>
+                <th>Adresa</th>
+                <th>Godina otvaranja</th>
+                <th rowspan="2"><button id="search-button">Pretrazi</button></th>
+            </tr>
+            <tr>
+                <td><input type="text" id="search-name" placeholder="Ime" /></td>
+                <td><input type="text" id="search-address" placeholder="Adresa" /></td>
+                <td><input type="number" id="search-min-year" min="1999" max="2022" placeholder="min" /><input type="number" id="search-max-year" min="1999" max="2022" placeholder="max" /></td>
+            </tr>
 
+        </table>
+
+
+
+    </div>
+    <br />
+    <br />
+    <div id="fitness-centers-div">
+
+    </div>
 
 
 
