--- a/PR060-2019-Web-projekat/HTML/Login.html
+++ b/PR060-2019-Web-projekat/HTML/Login.html
@@ -32,14 +32,16 @@
         </nav>
     </header>
     <!--------------------LOGIN--------------------------------->
-    <p>Ovo je prijava</p>
-    <div class="container">
-        <h1>Prijava</h1>
+    
+    <div class="container"> 
         
         <form class="login-form">
-            <input id="txt-username" type="text" placeholder="Username">
-            <input id="txt-password" type="password" placeholder="Password">
-            <button id="loggin-button" type="submit" >Login</button>
+            <table>
+                <tr><td colspan="2" align="center"><h1>Prijava</h1></td></tr>
+                <tr><td>Korisnicko ime</td><td><input id="txt-username" type="text" placeholder="Korisnicko ime"></td></tr>
+                <tr><td>Lozinka</td><td><input id="txt-password" type="password" placeholder="Lozinka"></td></tr>
+                <tr><td colspan="2" align="center"><button id="loggin-button" type="submit">Prijavi se</button></td></tr>
+            </table>
         </form>
     </div>
 
