--- a/PR060-2019-Web-projekat/HTML/Profile.html
+++ b/PR060-2019-Web-projekat/HTML/Profile.html
@@ -31,9 +31,34 @@
             </ul>
         </nav>
     </header>
-    <!--------------------HOME--------------------------------->
+    <!--------------------PROFILE--------------------------------->
 
+    <div class="container">
+        <form class="profile-form">
+            <table>
+                <tr><td colspan="2" align="center"><h1>Profil</h1></td></tr>
+                <tr><td>Korisnicko ime</td><td> <input id="txt-username" type="text" placeholder="Korisnicko ime"></td></tr>
+                <tr><td>Lozinka</td><td><input id="txt-password" type="password" placeholder="Lozinka"></td></tr>
+                <tr><td>Potvrdi lozinku</td><td><input id="txt-confirm-password" type="password" placeholder="Potvrdi lozinku"></td></tr>
+                <tr><td>Ime</td><td><input id="txt-fname" type="text" placeholder="Ime"></td></tr>
+                <tr><td>Prezime</td><td><input id="txt-lname" type="text" placeholder="Prezime"></td></tr>
+                <tr><td>Email</td><td><input id="txt-email" type="email" placeholder="E-mail"></td></tr>
+                <tr><td>Datum rodjenja</td><td><input id="txt-date" type="date"></td></tr>
+                <tr>
+                    <td>Pol</td>
+                    <td>
+                        <select id="gender">
+                            <option value="0">Musko</option>
+                            <option value="1">Zensko</option>
+                            <option value="2">Drugo</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr><td colspan="2" align="center"><button id="profile-save-button" type="submit">Sacuvaj</button></td></tr>
 
+            </table>
+        </form>
+    </div>
 
 
 </body>
