Completed Visitor features

--- a/PR060-2019-Web-projekat/HTML/FitnessCenterDetails.html
+++ b/PR060-2019-Web-projekat/HTML/FitnessCenterDetails.html
@@ -36,6 +36,7 @@
     <br />
     <div id="fitness-center-details">
         <table id="fitness-center-details-table">
+            
             <tr>
                 <th colspan="2">FITNES CENTAR</th>
             </tr>
@@ -88,14 +89,24 @@
     <!--------------------GROUP TRAINING DETAILS--------------------------------->
     <div id="group-trainings-details">
         <table id="group-trainings-details-table">
+            <colgroup>
+                <col style="width:5%">
+                <col style="width:10%">
+                <col style="width:15%">
+                <col style="width:15%">
+                <col style="width:20%">
+                <col style="width:15%">
+                <col style="width:10%">
+            </colgroup>
             <tr>
-                <th colspan="5">Grupni treninzi</th>
+                <th colspan="6">Grupni treninzi</th>
             </tr>
             <tr>
                 <th>Id</th>
+                <th>Naziv</th>
                 <th>Tip</th>
                 <th>Trajanje</th>
-                <th>Vreme</th>
+                <th>Datum / Vreme</th>
                 <th>Prijavljeno/Ukupno</th>
             </tr>
         </table>
