--- a/PR060-2019-Web-projekat/HTML/Edit_trainers.html
+++ b/PR060-2019-Web-projekat/HTML/Edit_trainers.html
@@ -18,8 +18,9 @@
                 <li><a id="nav-index" href="#">Fitnes Centri</a></li>
                 <li><a id="nav-history" href="#">Istorija</a></li>
                 <li><a id="nav-my-trainings" href="#">Moji treninzi</a></li>
-                <li><a id="nav-edit-trainers" href="#">Upravljaj trenerima</a></li>
+                <li><a id="nav-edit-trainers" href="#">Dodaj trenera</a></li>
                 <li><a id="nav-edit-centers" href="#">Upravljaj fitnes centrima</a></li>
+                <li><a id="nav-comments" href="#">Komentari</a></li>
             </ul>
         </nav>
         <nav class="nav-right">
@@ -32,7 +33,50 @@
         </nav>
     </header>
     <!--------------------HOME--------------------------------->
+    <div class="container">
+        <form class="registration-form">
+            <table>
+                <tr><td colspan="2" align="center"><h1>Registruj trenera</h1></td></tr>
+                <tr><td>Korisnicko ime</td><td> <input id="txt-username" type="text" placeholder="Korisnicko ime"></td></tr>
+                <tr><td>Lozinka</td><td><input id="txt-password" type="password" placeholder="Lozinka"></td></tr>
+                <tr><td>Potvrdi lozinku</td><td><input id="txt-confirm-password" type="password" placeholder="Potvrdi lozinku"></td></tr>
+                <tr><td>Ime</td><td><input id="txt-fname" type="text" placeholder="Ime"></td></tr>
+                <tr><td>Prezime</td><td><input id="txt-lname" type="text" placeholder="Prezime"></td></tr>
+                <tr><td>Email</td><td><input id="txt-email" type="email" placeholder="E-mail"></td></tr>
+                <tr><td>Datum rodjenja</td><td><input id="txt-date" type="date"></td></tr>
+                <tr><td>Centar</td><td><select id="txt-center"></select></td></tr>
+                <tr>
+                    <td>Pol</td>
+                    <td>
+                        <select id="gender">
+                            <option value="0">Musko</option>
+                            <option value="1">Zensko</option>
+                            <option value="2">Drugo</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr><td colspan="2" align="center"><button id="registration-button" type="submit">Registruj trenera</button></td></tr>
 
+            </table>
+        </form>
+    </div>
+    <div id="show-trainers" class="container">
+        <table id="trainer-table">
+            <colgroup>
+                <col style="width:25%">
+                <col style="width:25%">
+                <col style="width:25%">
+                <col style="width:25%">
+                
+            </colgroup>
+            <tr>
+                <th>Id</th>
+                <th>Ime i prezime</th>
+                <th>Korisnicko ime</th>
+                <th>Banovan</th>
+            </tr>
+        </table>
+    </div>
 
 
 
