--- a/PR060-2019-Web-projekat/HTML/Profile.html
+++ b/PR060-2019-Web-projekat/HTML/Profile.html
@@ -18,8 +18,9 @@
                 <li><a id="nav-index" href="#">Fitnes Centri</a></li>
                 <li><a id="nav-history" href="#">Istorija</a></li>
                 <li><a id="nav-my-trainings" href="#">Moji treninzi</a></li>
-                <li><a id="nav-edit-trainers" href="#">Upravljaj trenerima</a></li>
+                <li><a id="nav-edit-trainers" href="#">Dodaj trenera</a></li>
                 <li><a id="nav-edit-centers" href="#">Upravljaj fitnes centrima</a></li>
+                <li><a id="nav-comments" href="#">Komentari</a></li>
             </ul>
         </nav>
         <nav class="nav-right">
