--- a/PR060-2019-Web-projekat/HTML/Registration.html
+++ b/PR060-2019-Web-projekat/HTML/Registration.html
@@ -18,8 +18,9 @@
                 <li><a id="nav-index" href="#">Fitnes Centri</a></li>
                 <li><a id="nav-history" href="#">Istorija</a></li>
                 <li><a id="nav-my-trainings" href="#">Moji treninzi</a></li>
-                <li><a id="nav-edit-trainers" href="#">Upravljaj trenerima</a></li>
+                <li><a id="nav-edit-trainers" href="#">Dodaj trenera</a></li>
                 <li><a id="nav-edit-centers" href="#">Upravljaj fitnes centrima</a></li>
+                <li><a id="nav-comments" href="#">Komentari</a></li>
             </ul>
         </nav>
         <nav class="nav-right">
@@ -46,6 +47,7 @@
                 <tr><td>Prezime</td><td><input id="txt-lname" type="text" placeholder="Prezime"></td></tr>
                 <tr><td>Email</td><td><input id="txt-email" type="email" placeholder="E-mail"></td></tr>
                 <tr><td>Datum rodjenja</td><td><input id="txt-date" type="date"></td></tr>
+
                 <tr>
                     <td>Pol</td>
                     <td>
